--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.2.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -20,10 +21,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-fontawesome": "~0.9.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "font-awesome": "~4.7.0", 
-"angular2-fontawesome": "~0.9.0",
     "core-js": "^2.4.1",
+    "font-awesome": "~4.7.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
